# surrealql-language-server

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
crates/language-server/: Cargo.toml  README.md  build.rs
crates/language-server/examples/: neovim.lua
crates/language-server/src/: backend.rs  grammar.rs
crates/language-server/src/providers/: surrealdb.rs
crates/language-server/src/semantic/: analyzer.rs  mod.rs  model.rs  text.rs  type_expr.rs  types.rs
extensions/zed-surrealql/: Cargo.toml  extension.toml
extensions/zed-surrealql/languages/surql/: config.toml  highlights.scm
extensions/zed-surrealql/src/: lib.rs
pkg/: package.json
scripts/: build-wasm.sh  check-zed-grammar-sync.sh  setup-grammar.sh  sync-zed-grammar.sh
src/: backend.rs  config.rs  lib.rs  main.rs  runtime.rs
src/core/: client.rs  completion_context.rs  mod.rs  server.rs  state.rs
src/native/: backend.rs  metadata_db.rs  mod.rs  notifier.rs  workspace_fs.rs
src/providers/: surrealdb.rs
src/semantic/: analyzer.rs  highlight.rs  mod.rs  model.rs  node_kind.rs  text.rs  types.rs
src/wasm/: dispatch.rs  host_data.rs  mod.rs  notifier.rs  server.rs
tests/: lsp.rs
wasm/include/: stdlib.h  string.h
