[package]
name = 'surrealql-language-server'
version = '0.1.2'
edition = '2024'
authors = ['Chiru Boggavarapu <chiru@foretag.co>', 'Tobie Morgan Hitchcock <tobie@surrealdb.com>']
license-file = 'LICENSE'
description = 'Language Server Protocol implementation for SurrealQL'
keywords = ['surrealdb', 'language-server']

[dependencies]
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
surrealdb = { version = '3.0.5', default-features = false, features = ['protocol-http', 'protocol-ws', 'rustls'] }
strsim = '0.11.1'
tokio = { version = '1.48.0', features = ['io-std', 'macros', 'rt-multi-thread', 'sync'] }
tower-lsp = '0.20.0'
tree-sitter = '0.26.6'
walkdir = '2.5.0'

[build-dependencies]
cc = '1.2.56'

[dev-dependencies]
pretty_assertions = '1.4.1'
