[package]
name = 'surrealql-language-server'
version = '0.1.2'
edition = '2024'
authors = ['Chiru Boggavarapu <chiru@foretag.co>', 'Tobie Morgan Hitchcock <tobie@surrealdb.com>']
license-file = 'LICENSE'
description = 'Language Server Protocol implementation for SurrealQL'
keywords = ['surrealdb', 'language-server']

[dependencies]
base64 = '0.22'
reqwest = { version = '0.12', default-features = false, features = ['rustls-tls'] }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
strsim = '0.11.1'
tokio = { version = '1.48.0', features = ['io-std', 'macros', 'rt-multi-thread', 'sync', 'time'] }
tower-lsp-server = '0.23.0'
tree-sitter = '0.26.6'
walkdir = '2.5.0'

[build-dependencies]
cc = '1.2.56'

[dev-dependencies]
pretty_assertions = '1.4.1'

[profile.release]
lto = 'fat'
codegen-units = 1
strip = 'symbols'
panic = 'abort'
opt-level = 3
