[package]
name = "surreal-language-server"
version = "0.1.0"
edition = "2024"
description = "Generic Language Server Protocol implementation for SurrealQL"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "3.0.1", default-features = false, features = ["protocol-http", "protocol-ws", "rustls"] }
strsim = "0.11.1"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
tree-sitter = "0.26.6"
walkdir = "2.5.0"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
pretty_assertions = "1.4.1"
